deployments/mealie/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    kubernetes.io/metadata.name: bongz-space
  name: mealie
spec:
  finalizers:
  - kubernetes
status:
  phase: Active
