deployments/mealie/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: mealie
  name: mealie
  namespace: mealie
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mealie
  template:
    metadata:
      labels:
        app: mealie
    spec:
      containers:
      - image: ghcr.io/mealie-recipes/mealie:v3.5.0
        name: mealie
        ports:
          - containerPort: 9000
        volumeMounts:
          - name: mealie-data
            mountPath: /app/data
      volumes:
      - name: mealie-data
        persistentVolumeClaim:
          claimName: mealie-data
