deployments/mealie/newFileName.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "3"
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{},"labels":{"app":"mealie"},"name":"mealie","namespace":"mealie"},"spec":{"replicas":1,"selector":{"matchLabels":{"app":"mealie"}},"template":{"metadata":{"labels":{"app":"mealie"}},"spec":{"containers":[{"image":"ghcr.io/mealie-recipes/mealie:v3.5.0","name":"mealie","ports":[{"containerPort":9000}],"volumeMounts":[{"mountPath":"/app/data","name":"mealie-data"}]}],"volumes":[{"name":"mealie-data","persistentVolumeClaim" [...]
  creationTimestamp: "2026-01-05T07:47:14Z"
  generation: 3
  labels:
    app: mealie
  name: mealie
  namespace: mealie
  resourceVersion: "3102616"
  uid: aee98f62-1a3f-4e2a-a871-c1f0abc0316d
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: mealie
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: mealie
    spec:
      containers:
      - image: ghcr.io/mealie-recipes/mealie:v3.5.0
        imagePullPolicy: IfNotPresent
        name: mealie
        ports:
        - containerPort: 9000
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /app/data
          name: mealie-data
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - name: mealie-data
        persistentVolumeClaim:
          claimName: mealie-data
status:
  availableReplicas: 1
  conditions:
  - lastTransitionTime: "2026-01-05T09:36:54Z"
    lastUpdateTime: "2026-01-05T09:36:54Z"
    message: ReplicaSet "mealie-6bcd7cd644" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  - lastTransitionTime: "2026-01-06T11:54:46Z"
    lastUpdateTime: "2026-01-06T11:54:46Z"
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  observedGeneration: 3
  readyReplicas: 1
  replicas: 1
  updatedReplicas: 1
